--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,28 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- primary colors -->
+    <color name="primary">#7B61FF</color>
+    <color name="primaryDark">#4C34B7</color>
+    <color name="acent">#FFB84C</color>
+
+    <!-- secondary colors -->
+    <color name="secondaryBackgroud">#F8F8F8</color>
+    <color name="surface">#FFFF</color>
+    <color name="textPrimary">#1C1C1E</color>
+    <color name="textSecondary">#6E6E73</color>
+
+    <!-- splash backgroud -->
+    <color name="splashBackgroud">#00B0B2</color>
+
+    <!-- chip and label colors -->
+    <color name="chipSelected">#E0D7FF</color>
+    <color name="chipText">#4A4A4A</color>
+
+    <!-- webview border colors -->
+    <color name="borderLight">#DDDDDD</color>
+
+    <!-- error colors -->
+    <color name="colorError">#DF0505</color>
 </resources>
